# GraphClerk

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  constants.py
backend/tests/: conftest.py  test_config.py  test_db_connection.py  test_health.py  test_models.py  test_phase1_8_track_b_full_stack_retrieve.py  test_phase1_8_track_b_indexed_retrieval.py  test_phase2_api.py  test_phase2_ingestion.py  test_phase2_parsers.py  test_phase3_embedding.py  test_phase3_graph_api.py  test_phase3_graph_evidence_api.py  test_phase3_graph_traversal_api.py  test_phase3_graph_traversal_service.py  test_phase3_qdrant_vector_index_integration.py  test_phase3_repositories.py  test_phase3_semantic_index_api.py  test_phase3_semantic_index_search_api.py  test_phase3_semantic_index_search_service.py  test_phase3_vector_index_service.py  test_phase4_context_budget.py  test_phase4_evidence_selection.py  test_phase4_packet_builder.py  test_phase4_query_intent.py  test_phase4_retrieval_packet_contract.py  test_phase4_retrieve_api.py  test_phase4_route_selection.py  test_phase5_artifact_ingest_routing.py  test_phase5_artifact_type_resolver.py  test_phase5_audio_extractor.py  test_phase5_evidence_unit_candidate.py  test_phase5_extractor_registry.py  test_phase5_file_clerk_multimodal_evidence.py  test_phase5_image_extractor.py  test_phase5_multimodal_ingest_http_errors.py  test_phase5_pdf_extractor.py  test_phase5_pptx_extractor.py  test_phase6_cors.py  test_phase6_retrieval_logs_api.py  (+24 more)
(+228 files in other folders)
