[project]
name = "graphclerk-backend"
version = "0.1.0"
description = "GraphClerk Phase 1 backend foundation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "qdrant-client>=1.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
pdf = [
  "pypdf>=5.0",
]
pptx = [
  "python-pptx>=1.0.0",
]
image = [
  "Pillow>=10.0",
]
audio = [
  "mutagen>=1.47",
]
language-detector = [
  "lingua-language-detector>=2.2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

